--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,10 @@
 <body>
     <h1> This is Base Page </h1>
 
-    
+    <a href="{{ url_for('home') }}" target="_blank">Home</a><br>
+    <a href="{{ url_for('about') }}" target="_blank">About</a><br>
+    <a href="{{ url_for('projects') }}" target="_blank">Projects</a><br>
+    <a href="{{ url_for('contact') }}" target="_blank">Contact</a><br>
 
 </body>
 </html>
