--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 
 {% block content %}
+
 <h1>Hi, I’m Subhasree Patro </h1>
-<p>This is my portfolio </p>
+<p>This is my portfolio homepage.</p>
+
 {% endblock %}
