updated base.html and home.html

--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,9 @@
 
 {% block content %}
 
+
 <h1>Hi, I’m Subhasree Patro </h1>
-<p>This is my portfolio homepage.</p>
+<p>Welcome to my Personal Portfolio </p>
+
 
 {% endblock %}
