--- a/templates/base.html
+++ b/templates/base.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Base</title>
+    <title>My Portfolio</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-    
+    <nav>
+        <a href="{{ url_for('home') }}">Home</a>
+        <a href="{{ url_for('about') }}">About</a>
+        <a href="{{ url_for('projects') }}">Projects</a>
+        <a href="{{ url_for('contact') }}">Contact</a>
+    </nav>
+    <hr>
 
-    <a href="{{ url_for('home') }}" target="_blank">Home</a><br>
-    <a href="{{ url_for('about') }}" target="_blank">About</a><br>
-    <a href="{{ url_for('projects') }}" target="_blank">Projects</a><br>
-    <a href="{{ url_for('contact') }}" target="_blank">Contact</a><br>
+    {% block content %}
+
+    {% endblock %}
 
 </body>
 </html>
